gcc/testsuite/g++.old-deja/g++.ns/ns17.C
// { dg-do assemble  }
namespace foo
{
  class c
  {
  };
}

int
foo::c:fn ()  // { dg-error "" } syntax error
{
}

